--- a/Lesson_with_solutions.ipynb
+++ b/Lesson_with_solutions.ipynb
@@ -141,6 +141,287 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conditional Probability\n",
+    "\n",
+    "To discuss conditional probability, let's look at the mushroom dataset from UCI [here](https://archive.ics.uci.edu/ml/datasets/Mushroom\n",
+    ").\n",
+    "\n",
+    "This dataset includes 23 variables, starting with whether each mushroom is poisonous (p) or edible (e). From there, the next features are:\n",
+    "\n",
+    "\n",
+    "1. cap-shape: bell=b,conical=c,convex=x,flat=f, knobbed=k,sunken=s\n",
+    "2. cap-surface: fibrous=f,grooves=g,scaly=y,smooth=s\n",
+    "3. cap-color: brown=n,buff=b,cinnamon=c,gray=g,green=r, pink=p,purple=u,red=e,white=w,yellow=y\n",
+    "4. bruises?: bruises=t,no=f\n",
+    "5. odor: almond=a,anise=l,creosote=c,fishy=y,foul=f, musty=m,none=n,pungent=p,spicy=s\n",
+    "6. gill-attachment: attached=a,descending=d,free=f,notched=n\n",
+    "7. gill-spacing: close=c,crowded=w,distant=d\n",
+    "8. gill-size: broad=b,narrow=n\n",
+    "9. gill-color: black=k,brown=n,buff=b,chocolate=h,gray=g, green=r,orange=o,pink=p,purple=u,red=e, white=w,yellow=y\n",
+    "10. stalk-shape: enlarging=e,tapering=t\n",
+    "11. stalk-root: bulbous=b,club=c,cup=u,equal=e, rhizomorphs=z,rooted=r,missing=?\n",
+    "12. stalk-surface-above-ring: fibrous=f,scaly=y,silky=k,smooth=s\n",
+    "13. stalk-surface-below-ring: fibrous=f,scaly=y,silky=k,smooth=s\n",
+    "14. stalk-color-above-ring: brown=n,buff=b,cinnamon=c,gray=g,orange=o, pink=p,red=e,white=w,yellow=y\n",
+    "15. stalk-color-below-ring: brown=n,buff=b,cinnamon=c,gray=g,orange=o, pink=p,red=e,white=w,yellow=y\n",
+    "16. veil-type: partial=p,universal=u\n",
+    "17. veil-color: brown=n,orange=o,white=w,yellow=y\n",
+    "18. ring-number: none=n,one=o,two=t\n",
+    "19. ring-type: cobwebby=c,evanescent=e,flaring=f,large=l, none=n,pendant=p,sheathing=s,zone=z\n",
+    "20. spore-print-color: black=k,brown=n,buff=b,chocolate=h,green=r, orange=o,purple=u,white=w,yellow=y\n",
+    "21. population: abundant=a,clustered=c,numerous=n, scattered=s,several=v,solitary=y\n",
+    "22. habitat: grasses=g,leaves=l,meadows=m,paths=p, urban=u,waste=w,woods=d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>edible-poisonous</th>\n",
+       "      <th>cap-shape</th>\n",
+       "      <th>cap-surface</th>\n",
+       "      <th>cap-color</th>\n",
+       "      <th>bruises?</th>\n",
+       "      <th>odor</th>\n",
+       "      <th>gill-attachment</th>\n",
+       "      <th>gill-spacing</th>\n",
+       "      <th>gill-size</th>\n",
+       "      <th>...</th>\n",
+       "      <th>stalk-surface-below-ring</th>\n",
+       "      <th>stalk-color-above-ring</th>\n",
+       "      <th>stalk-color-below-ring</th>\n",
+       "      <th>veil-type</th>\n",
+       "      <th>veil-color</th>\n",
+       "      <th>ring-number</th>\n",
+       "      <th>ring-type</th>\n",
+       "      <th>spore-print-color</th>\n",
+       "      <th>population</th>\n",
+       "      <th>habitat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>p</td>\n",
+       "      <td>x</td>\n",
+       "      <td>s</td>\n",
+       "      <td>n</td>\n",
+       "      <td>t</td>\n",
+       "      <td>p</td>\n",
+       "      <td>f</td>\n",
+       "      <td>c</td>\n",
+       "      <td>n</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>k</td>\n",
+       "      <td>s</td>\n",
+       "      <td>u</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>e</td>\n",
+       "      <td>x</td>\n",
+       "      <td>s</td>\n",
+       "      <td>y</td>\n",
+       "      <td>t</td>\n",
+       "      <td>a</td>\n",
+       "      <td>f</td>\n",
+       "      <td>c</td>\n",
+       "      <td>b</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>n</td>\n",
+       "      <td>n</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>e</td>\n",
+       "      <td>b</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>t</td>\n",
+       "      <td>l</td>\n",
+       "      <td>f</td>\n",
+       "      <td>c</td>\n",
+       "      <td>b</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>n</td>\n",
+       "      <td>n</td>\n",
+       "      <td>m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>p</td>\n",
+       "      <td>x</td>\n",
+       "      <td>y</td>\n",
+       "      <td>w</td>\n",
+       "      <td>t</td>\n",
+       "      <td>p</td>\n",
+       "      <td>f</td>\n",
+       "      <td>c</td>\n",
+       "      <td>n</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>k</td>\n",
+       "      <td>s</td>\n",
+       "      <td>u</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>e</td>\n",
+       "      <td>x</td>\n",
+       "      <td>s</td>\n",
+       "      <td>g</td>\n",
+       "      <td>f</td>\n",
+       "      <td>n</td>\n",
+       "      <td>f</td>\n",
+       "      <td>w</td>\n",
+       "      <td>b</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>e</td>\n",
+       "      <td>n</td>\n",
+       "      <td>a</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0 edible-poisonous cap-shape cap-surface cap-color bruises? odor  \\\n",
+       "0           0                p         x           s         n        t    p   \n",
+       "1           1                e         x           s         y        t    a   \n",
+       "2           2                e         b           s         w        t    l   \n",
+       "3           3                p         x           y         w        t    p   \n",
+       "4           4                e         x           s         g        f    n   \n",
+       "\n",
+       "  gill-attachment gill-spacing gill-size   ...   stalk-surface-below-ring  \\\n",
+       "0               f            c         n   ...                          s   \n",
+       "1               f            c         b   ...                          s   \n",
+       "2               f            c         b   ...                          s   \n",
+       "3               f            c         n   ...                          s   \n",
+       "4               f            w         b   ...                          s   \n",
+       "\n",
+       "  stalk-color-above-ring stalk-color-below-ring veil-type veil-color  \\\n",
+       "0                      w                      w         p          w   \n",
+       "1                      w                      w         p          w   \n",
+       "2                      w                      w         p          w   \n",
+       "3                      w                      w         p          w   \n",
+       "4                      w                      w         p          w   \n",
+       "\n",
+       "  ring-number ring-type spore-print-color population habitat  \n",
+       "0           o         p                 k          s       u  \n",
+       "1           o         p                 n          n       g  \n",
+       "2           o         p                 n          n       m  \n",
+       "3           o         p                 k          s       u  \n",
+       "4           o         e                 n          a       g  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('Mushrooms_cleaned.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Partitioning Complex Events"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
