preprocessed mushroom data further, added section to lesson on conditional probability

--- a/Mushroom_Preprocessing_Script.ipynb
+++ b/Mushroom_Preprocessing_Script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,28 +231,115 @@
    "source": [
     "df = pd.read_csv('agaricus-lepiota.data', header=None)\n",
     "df.columns = ['edible-poisonous',\n",
-    "    'cap-shape',\n",
-    " 'cap-surface',\n",
-    " 'cap-color',\n",
-    " 'bruises?',\n",
-    " 'odor',\n",
-    " 'gill-attachment',\n",
-    " 'gill-spacing',\n",
-    " 'gill-size',\n",
-    " 'gill-color',\n",
-    " 'stalk-shape',\n",
-    " 'stalk-root',\n",
-    " 'stalk-surface-above-ring',\n",
-    " 'stalk-surface-below-ring',\n",
-    " 'stalk-color-above-ring',\n",
-    " 'stalk-color-below-ring',\n",
-    " 'veil-type',\n",
-    " 'veil-color',\n",
-    " 'ring-number',\n",
-    " 'ring-type',\n",
-    " 'spore-print-color',\n",
-    " 'population',\n",
-    " 'habitat']\n",
+    "              'cap-shape',\n",
+    "              'cap-surface',\n",
+    "              'cap-color',\n",
+    "              'bruises?',\n",
+    "              'odor',\n",
+    "              'gill-attachment',\n",
+    "              'gill-spacing',\n",
+    "              'gill-size',\n",
+    "              'gill-color',\n",
+    "              'stalk-shape',\n",
+    "              'stalk-root',\n",
+    "              'stalk-surface-above-ring',\n",
+    "              'stalk-surface-below-ring',\n",
+    "              'stalk-color-above-ring',\n",
+    "              'stalk-color-below-ring',\n",
+    "              'veil-type',\n",
+    "              'veil-color',\n",
+    "              'ring-number',\n",
+    "              'ring-type',\n",
+    "              'spore-print-color',\n",
+    "              'population',\n",
+    "              'habitat']\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[['edible-poisonous', 'bruises?']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>edible-poisonous</th>\n",
+       "      <th>bruises?</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>p</td>\n",
+       "      <td>t</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>e</td>\n",
+       "      <td>t</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>e</td>\n",
+       "      <td>t</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>p</td>\n",
+       "      <td>t</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>e</td>\n",
+       "      <td>f</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  edible-poisonous bruises?\n",
+       "0                p        t\n",
+       "1                e        t\n",
+       "2                e        t\n",
+       "3                p        t\n",
+       "4                e        f"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "df.head()"
    ]
   },
@@ -260,41 +347,130 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>edible-poisonous</th>\n",
+       "      <th>bruises?</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>poisonous</td>\n",
+       "      <td>true</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>edible</td>\n",
+       "      <td>true</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>edible</td>\n",
+       "      <td>true</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>poisonous</td>\n",
+       "      <td>true</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>edible</td>\n",
+       "      <td>false</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  edible-poisonous bruises?\n",
+       "0        poisonous     true\n",
+       "1           edible     true\n",
+       "2           edible     true\n",
+       "3        poisonous     true\n",
+       "4           edible    false"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.to_csv('Mushrooms_cleaned.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = [\"cap-shape: bell=b,conical=c,convex=x,flat=f, knobbed=k,sunken=s\",\n",
-    "\"cap-surface: fibrous=f,grooves=g,scaly=y,smooth=s\",\n",
-    "\"cap-color: brown=n,buff=b,cinnamon=c,gray=g,green=r, pink=p,purple=u,red=e,white=w,yellow=y\",\n",
-    "\"bruises?: bruises=t,no=f\",\n",
-    "\"odor: almond=a,anise=l,creosote=c,fishy=y,foul=f, musty=m,none=n,pungent=p,spicy=s\",\n",
-    "\"gill-attachment: attached=a,descending=d,free=f,notched=n\",\n",
-    "\"gill-spacing: close=c,crowded=w,distant=d\",\n",
-    "\"gill-size: broad=b,narrow=n\",\n",
-    "\"gill-color: black=k,brown=n,buff=b,chocolate=h,gray=g, green=r,orange=o,pink=p,purple=u,red=e, white=w,yellow=y\",\n",
-    "\"stalk-shape: enlarging=e,tapering=t\",\n",
-    "\"stalk-root: bulbous=b,club=c,cup=u,equal=e, rhizomorphs=z,rooted=r,missing=?\",\n",
-    "\"stalk-surface-above-ring: fibrous=f,scaly=y,silky=k,smooth=s\",\n",
-    "\"stalk-surface-below-ring: fibrous=f,scaly=y,silky=k,smooth=s\",\n",
-    "\"stalk-color-above-ring: brown=n,buff=b,cinnamon=c,gray=g,orange=o, pink=p,red=e,white=w,yellow=y\",\n",
-    "\"stalk-color-below-ring: brown=n,buff=b,cinnamon=c,gray=g,orange=o, pink=p,red=e,white=w,yellow=y\",\n",
-    "\"veil-type: partial=p,universal=u\",\n",
-    "\"veil-color: brown=n,orange=o,white=w,yellow=y\",\n",
-    "\"ring-number: none=n,one=o,two=t\",\n",
-    "\"ring-type: cobwebby=c,evanescent=e,flaring=f,large=l, none=n,pendant=p,sheathing=s,zone=z\",\n",
-    "\"spore-print-color: black=k,brown=n,buff=b,chocolate=h,green=r, orange=o,purple=u,white=w,yellow=y\",\n",
-    "\"population: abundant=a,clustered=c,numerous=n, scattered=s,several=v,solitary=y\",\n",
-    "\"habitat: grasses=g,leaves=l,meadows=m,paths=p, urban=u,waste=w,woods=d\"]\n",
+    "df['edible-poisonous'] = df['edible-poisonous'].map({'p':'poisonous', 'e':'edible'})\n",
+    "df['bruises?'] = df['bruises?'].map({'t':'true', 'f': 'false'})\n",
     "\n",
-    "[i.split(':')[1:] for i in s]"
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['bruised'] = df['bruises?']\n",
+    "del df['bruises?']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('Mushrooms_cleaned.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Attributes: \n",
+    "\n",
+    "1. cap-shape: bell=b,conical=c,convex=x,flat=f, knobbed=k,sunken=s \n",
+    "2. cap-surface: fibrous=f,grooves=g,scaly=y,smooth=s \n",
+    "3. cap-color: brown=n,buff=b,cinnamon=c,gray=g,green=r, pink=p,purple=u,red=e,white=w,yellow=y \n",
+    "4. bruises?: bruises=t,no=f \n",
+    "5. odor: almond=a,anise=l,creosote=c,fishy=y,foul=f, musty=m,none=n,pungent=p,spicy=s \n",
+    "6. gill-attachment: attached=a,descending=d,free=f,notched=n \n",
+    "7. gill-spacing: close=c,crowded=w,distant=d \n",
+    "8. gill-size: broad=b,narrow=n \n",
+    "9. gill-color: black=k,brown=n,buff=b,chocolate=h,gray=g, green=r,orange=o,pink=p,purple=u,red=e, white=w,yellow=y \n",
+    "10. stalk-shape: enlarging=e,tapering=t \n",
+    "11. stalk-root: bulbous=b,club=c,cup=u,equal=e, rhizomorphs=z,rooted=r,missing=? \n",
+    "12. stalk-surface-above-ring: fibrous=f,scaly=y,silky=k,smooth=s \n",
+    "13. stalk-surface-below-ring: fibrous=f,scaly=y,silky=k,smooth=s \n",
+    "14. stalk-color-above-ring: brown=n,buff=b,cinnamon=c,gray=g,orange=o, pink=p,red=e,white=w,yellow=y \n",
+    "15. stalk-color-below-ring: brown=n,buff=b,cinnamon=c,gray=g,orange=o, pink=p,red=e,white=w,yellow=y \n",
+    "16. veil-type: partial=p,universal=u \n",
+    "17. veil-color: brown=n,orange=o,white=w,yellow=y \n",
+    "18. ring-number: none=n,one=o,two=t \n",
+    "19. ring-type: cobwebby=c,evanescent=e,flaring=f,large=l, none=n,pendant=p,sheathing=s,zone=z \n",
+    "20. spore-print-color: black=k,brown=n,buff=b,chocolate=h,green=r, orange=o,purple=u,white=w,yellow=y \n",
+    "21. population: abundant=a,clustered=c,numerous=n, scattered=s,several=v,solitary=y \n",
+    "22. habitat: grasses=g,leaves=l,meadows=m,paths=p, urban=u,waste=w,woods=d"
    ]
   },
   {
@@ -303,30 +479,101 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[['bell:b,conical:c,convex:x,flat:f, knobbed:k,sunken:s'],\n",
-    " ['fibrous:f,grooves:g,scaly:y,smooth:s'],\n",
-    " ['brown:n,buff:b,cinnamon:c,gray:g,green:r, pink:p,purple:u,red:e,white:w,yellow:y'],\n",
-    " ['bruises:t,no:f'],\n",
-    " ['almond:a,anise:l,creosote:c,fishy:y,foul:f, musty:m,none:n,pungent:p,spicy:s'],\n",
-    " ['attached:a,descending:d,free:f,notched:n'],\n",
-    " ['close:c,crowded:w,distant:d'],\n",
-    " ['broad:b,narrow:n'],\n",
-    " ['black:k,brown:n,buff:b,chocolate:h,gray:g, green:r,orange:o,pink:p,purple:u,red:e, white:w,yellow:y'],\n",
-    " ['enlarging:e,tapering:t'],\n",
-    " ['bulbous:b,club:c,cup:u,equal:e, rhizomorphs:z,rooted:r,missing:?'],\n",
-    " ['fibrous:f,scaly:y,silky:k,smooth:s'],\n",
-    " ['fibrous:f,scaly:y,silky:k,smooth:s'],\n",
-    " ['brown:n,buff:b,cinnamon:c,gray:g,orange:o, pink:p,red:e,white:w,yellow:y'],\n",
-    " ['brown:n,buff:b,cinnamon:c,gray:g,orange:o, pink:p,red:e,white:w,yellow:y'],\n",
-    " ['partial:p,universal:u'],\n",
-    " ['brown:n,orange:o,white:w,yellow:y'],\n",
-    " ['none:n,one:o,two:t'],\n",
-    " ['cobwebby:c,evanescent:e,flaring:f,large:l, none:n,pendant:p,sheathing:s,zone:z'],\n",
-    " ['black:k,brown:n,buff:b,chocolate:h,green:r, orange:o,purple:u,white:w,yellow:y'],\n",
-    " ['abundant:a,clustered:c,numerous:n, scattered:s,several:v,solitary:y'],\n",
-    " ['grasses:g,leaves:l,meadows:m,paths:p, urban:u,waste:w,woods:d']\n",
-    "]"
+    "df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is the probability of picking an edible mushroom given it is bruised? \n",
+    "\n",
+    "**P(edible | bruises? = true)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['edible-poisonous'].value_counts(dropna=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df['bruises?'] == 't']['edible-poisonous'].value_counts(dropna=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we need to calculate the probability that mushrooms are edible and bruised, $P(edible \\cap bruised)$: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "probability_edible_and_bruised = df[(df['edible-poisonous'] == 'e') & (df['bruises?'] == 't')].shape[0]/df.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "probability_edible_and_bruised"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we need to compute the probability that the mushrooms are bruised, $P(bruised)$: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "probability_bruised = df[df['bruises?'] == 't'].shape[0]/df.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "probability_edible_given_bruised = probability_edible_and_bruised/probability_bruised"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "probability_edible_given_bruised"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -345,7 +592,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
