--- a/Lesson_with_solutions.ipynb
+++ b/Lesson_with_solutions.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "56"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,48 +146,26 @@
    "source": [
     "## Conditional Probability\n",
     "\n",
-    "To discuss conditional probability, let's look at the mushroom dataset from UCI [here](https://archive.ics.uci.edu/ml/datasets/Mushroom\n",
-    ").\n",
+    "### When do we need to compute conditional probabilities? \n",
     "\n",
-    "This dataset includes 23 variables, starting with whether each mushroom is poisonous (p) or edible (e). From there, the next features are:\n",
+    "A: We need to compute conditional probabilities when the outcome of an event depends on the outcome of previous events (dependent events). A conditional probability of an event is the probability of the event given another event has occurred.\n",
     "\n",
+    "### Mushroom dataset\n",
     "\n",
-    "1. cap-shape: bell=b,conical=c,convex=x,flat=f, knobbed=k,sunken=s\n",
-    "2. cap-surface: fibrous=f,grooves=g,scaly=y,smooth=s\n",
-    "3. cap-color: brown=n,buff=b,cinnamon=c,gray=g,green=r, pink=p,purple=u,red=e,white=w,yellow=y\n",
-    "4. bruises?: bruises=t,no=f\n",
-    "5. odor: almond=a,anise=l,creosote=c,fishy=y,foul=f, musty=m,none=n,pungent=p,spicy=s\n",
-    "6. gill-attachment: attached=a,descending=d,free=f,notched=n\n",
-    "7. gill-spacing: close=c,crowded=w,distant=d\n",
-    "8. gill-size: broad=b,narrow=n\n",
-    "9. gill-color: black=k,brown=n,buff=b,chocolate=h,gray=g, green=r,orange=o,pink=p,purple=u,red=e, white=w,yellow=y\n",
-    "10. stalk-shape: enlarging=e,tapering=t\n",
-    "11. stalk-root: bulbous=b,club=c,cup=u,equal=e, rhizomorphs=z,rooted=r,missing=?\n",
-    "12. stalk-surface-above-ring: fibrous=f,scaly=y,silky=k,smooth=s\n",
-    "13. stalk-surface-below-ring: fibrous=f,scaly=y,silky=k,smooth=s\n",
-    "14. stalk-color-above-ring: brown=n,buff=b,cinnamon=c,gray=g,orange=o, pink=p,red=e,white=w,yellow=y\n",
-    "15. stalk-color-below-ring: brown=n,buff=b,cinnamon=c,gray=g,orange=o, pink=p,red=e,white=w,yellow=y\n",
-    "16. veil-type: partial=p,universal=u\n",
-    "17. veil-color: brown=n,orange=o,white=w,yellow=y\n",
-    "18. ring-number: none=n,one=o,two=t\n",
-    "19. ring-type: cobwebby=c,evanescent=e,flaring=f,large=l, none=n,pendant=p,sheathing=s,zone=z\n",
-    "20. spore-print-color: black=k,brown=n,buff=b,chocolate=h,green=r, orange=o,purple=u,white=w,yellow=y\n",
-    "21. population: abundant=a,clustered=c,numerous=n, scattered=s,several=v,solitary=y\n",
-    "22. habitat: grasses=g,leaves=l,meadows=m,paths=p, urban=u,waste=w,woods=d"
+    "To discuss conditional probability, let's look at a modified version of the Mushroom dataset from UCI [here](https://archive.ics.uci.edu/ml/datasets/Mushroom). Each row in this dataset corresponds to one observation (one mushroom). \n",
+    "\n",
+    "The modified dataset includes 2 variables:\n",
+    "\n",
+    "* **edible-poisonous**\n",
+    "    * This variable can have one of two values: if the mushroom is edible, \"edible\". If not, \"poisonous\"\n",
+    "\n",
+    "* **bruised**\n",
+    "    * This is a Boolean variable that can assume either one of two values, True or False."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -211,193 +189,57 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>edible-poisonous</th>\n",
-       "      <th>cap-shape</th>\n",
-       "      <th>cap-surface</th>\n",
-       "      <th>cap-color</th>\n",
-       "      <th>bruises?</th>\n",
-       "      <th>odor</th>\n",
-       "      <th>gill-attachment</th>\n",
-       "      <th>gill-spacing</th>\n",
-       "      <th>gill-size</th>\n",
-       "      <th>...</th>\n",
-       "      <th>stalk-surface-below-ring</th>\n",
-       "      <th>stalk-color-above-ring</th>\n",
-       "      <th>stalk-color-below-ring</th>\n",
-       "      <th>veil-type</th>\n",
-       "      <th>veil-color</th>\n",
-       "      <th>ring-number</th>\n",
-       "      <th>ring-type</th>\n",
-       "      <th>spore-print-color</th>\n",
-       "      <th>population</th>\n",
-       "      <th>habitat</th>\n",
+       "      <th>bruised</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>p</td>\n",
-       "      <td>x</td>\n",
-       "      <td>s</td>\n",
-       "      <td>n</td>\n",
-       "      <td>t</td>\n",
-       "      <td>p</td>\n",
-       "      <td>f</td>\n",
-       "      <td>c</td>\n",
-       "      <td>n</td>\n",
-       "      <td>...</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>p</td>\n",
-       "      <td>k</td>\n",
-       "      <td>s</td>\n",
-       "      <td>u</td>\n",
+       "      <td>poisonous</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>e</td>\n",
-       "      <td>x</td>\n",
-       "      <td>s</td>\n",
-       "      <td>y</td>\n",
-       "      <td>t</td>\n",
-       "      <td>a</td>\n",
-       "      <td>f</td>\n",
-       "      <td>c</td>\n",
-       "      <td>b</td>\n",
-       "      <td>...</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>p</td>\n",
-       "      <td>n</td>\n",
-       "      <td>n</td>\n",
-       "      <td>g</td>\n",
+       "      <td>edible</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>e</td>\n",
-       "      <td>b</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>t</td>\n",
-       "      <td>l</td>\n",
-       "      <td>f</td>\n",
-       "      <td>c</td>\n",
-       "      <td>b</td>\n",
-       "      <td>...</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>p</td>\n",
-       "      <td>n</td>\n",
-       "      <td>n</td>\n",
-       "      <td>m</td>\n",
+       "      <td>edible</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>p</td>\n",
-       "      <td>x</td>\n",
-       "      <td>y</td>\n",
-       "      <td>w</td>\n",
-       "      <td>t</td>\n",
-       "      <td>p</td>\n",
-       "      <td>f</td>\n",
-       "      <td>c</td>\n",
-       "      <td>n</td>\n",
-       "      <td>...</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>p</td>\n",
-       "      <td>k</td>\n",
-       "      <td>s</td>\n",
-       "      <td>u</td>\n",
+       "      <td>poisonous</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>e</td>\n",
-       "      <td>x</td>\n",
-       "      <td>s</td>\n",
-       "      <td>g</td>\n",
-       "      <td>f</td>\n",
-       "      <td>n</td>\n",
-       "      <td>f</td>\n",
-       "      <td>w</td>\n",
-       "      <td>b</td>\n",
-       "      <td>...</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>e</td>\n",
-       "      <td>n</td>\n",
-       "      <td>a</td>\n",
-       "      <td>g</td>\n",
+       "      <td>edible</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0 edible-poisonous cap-shape cap-surface cap-color bruises? odor  \\\n",
-       "0           0                p         x           s         n        t    p   \n",
-       "1           1                e         x           s         y        t    a   \n",
-       "2           2                e         b           s         w        t    l   \n",
-       "3           3                p         x           y         w        t    p   \n",
-       "4           4                e         x           s         g        f    n   \n",
-       "\n",
-       "  gill-attachment gill-spacing gill-size   ...   stalk-surface-below-ring  \\\n",
-       "0               f            c         n   ...                          s   \n",
-       "1               f            c         b   ...                          s   \n",
-       "2               f            c         b   ...                          s   \n",
-       "3               f            c         n   ...                          s   \n",
-       "4               f            w         b   ...                          s   \n",
-       "\n",
-       "  stalk-color-above-ring stalk-color-below-ring veil-type veil-color  \\\n",
-       "0                      w                      w         p          w   \n",
-       "1                      w                      w         p          w   \n",
-       "2                      w                      w         p          w   \n",
-       "3                      w                      w         p          w   \n",
-       "4                      w                      w         p          w   \n",
-       "\n",
-       "  ring-number ring-type spore-print-color population habitat  \n",
-       "0           o         p                 k          s       u  \n",
-       "1           o         p                 n          n       g  \n",
-       "2           o         p                 n          n       m  \n",
-       "3           o         p                 k          s       u  \n",
-       "4           o         e                 n          a       g  \n",
-       "\n",
-       "[5 rows x 24 columns]"
+       "  edible-poisonous  bruised\n",
+       "0        poisonous     True\n",
+       "1           edible     True\n",
+       "2           edible     True\n",
+       "3        poisonous     True\n",
+       "4           edible    False"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "df = pd.read_csv('Mushrooms_cleaned.csv')\n",
     "df.head()"
    ]
@@ -405,7 +247,151 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### If you picked a row from this dataset at random, what is the probability it corresponds to a bruised mushroom? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4155588380108321"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probability_bruised = df[df['bruised'] == True].shape[0]/df.shape[0]\n",
+    "probability_bruised"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### What is the probability you pick a row corresponding to a mushroom that is bruised _AND_ edible? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "probability_bruised_and_edible = df[(df['bruised'] == True) & (df['edible-poisonous'] == 'edible')].shape[0]/df.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### What is the probability of picking an edible mushroom given it is bruised, $P(edible|bruised)$? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8151658767772512"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probability_bruised_and_edible/probability_bruised"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### What is the probability of picking a bruised mushroom given it is edible, $P(bruised|edible)$? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* For this, it is important that students recognize that, even though computing the probability that a mushroom is edible and bruised is the same as the probability that a mushroom is bruised and edible, the conditional probability is **not the same** because the condition that needs to be met to compute the probability is different (i.e. the sample space is different)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.517971442639094"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probability_edible = df[df['edible-poisonous'] == 'edible'].shape[0]/df.shape[0]\n",
+    "probability_edible"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6539923954372624"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probability_bruised_and_edible/probability_edible"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Intuition behind conditional probability: \n",
+    "\n",
+    "How do you compute the probability that mushrooms are edible given they are bruised? \n",
+    "\n",
+    "* When you ask the question \"what is the probability that the mushrooms are edible and bruised?\", the sample space originally contains all 8124 rows of mushrooms. \n",
+    "\n",
+    "* However, to compute the probability that the mushrooms are edible given they are bruised, you need to consider the reduced size of the sample space. \n",
+    "\n",
+    "    * When you ask the question \"what is the probability that the mushrooms are edible given the mushrooms are bruised?\", you have effectively reduced the size of the sample space to include only those mushrooms that are bruised. \n",
+    "\n",
+    "    * Given that mushrooms are bruised, the only way for the mushrooms to be edible is for these mushrooms to fall in the intersection of the set of mushrooms that are edible _and_ the set of mushrooms that are bruised, $P(edible \\cap bruised)$\n",
+    "\n",
+    "    * To account for the smaller sample space, you divide the probability mushrooms are edible and bruised by the probability the mushrooms are bruised.\n",
+    "    \n",
+    "    $$ P(edible|bruised) = \\frac{P(edible \\cap bruised)}{P(bruised)}$$\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -445,7 +431,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
