fixed some code cells in notebook

--- a/Lesson_with_solutions.ipynb
+++ b/Lesson_with_solutions.ipynb
@@ -289,6 +289,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.33874938453963566"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probability_bruised_and_edible"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -297,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -308,13 +328,37 @@
        "0.8151658767772512"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "probability_bruised_and_edible/probability_bruised"
+    "prob_edible_given_bruised = probability_bruised_and_edible/probability_bruised\n",
+    "prob_edible_given_bruised"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "edible       0.815166\n",
+       "poisonous    0.184834\n",
+       "Name: edible-poisonous, dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bruised = df[df['bruised'] == True]\n",
+    "bruised['edible-poisonous'].value_counts(dropna=False, normalize=True)"
    ]
   },
   {
@@ -333,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +386,7 @@
        "0.517971442639094"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,22 +398,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "probability_bruised_given_edible = probability_bruised_and_edible/probability_edible"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6539923954372624"
+       "True     0.653992\n",
+       "False    0.346008\n",
+       "Name: bruised, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "probability_bruised_and_edible/probability_edible"
+    "edible = df[df['edible-poisonous'] == 'edible']\n",
+    "edible['bruised'].value_counts(dropna=False, normalize=True)"
    ]
   },
   {
