Updating combinations description

--- a/Lesson_with_solutions.ipynb
+++ b/Lesson_with_solutions.ipynb
@@ -109,16 +109,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Intuition Behind Combinations\n",
+    "## Explaining the Intuition Behind Combinations\n",
     "\n",
-    "* First ask the general question, if anyone can explain \n",
+    "\n",
+    "How would you compute the number of 3-topping combinations from the ingredients above by hand? Explain the rational behind your computations.\n",
+    "\n",
+    "\n",
+    "Potential Intuitive Explanation:\n",
+    "\n",
+    "> This explanation tries to build students understanding of combinations. Try and move student's discussion along this path. Some student's may explain the problem above by simple referencing the formula $C(n,r) = \\frac{n!}{r!(n-r)!}$. If this happens, praise student understanding and then ask if anyone can explain the reasoning behind the formula. \n",
+    "\n",
+    "\n",
     "8 choices for first topping * 7 remaining choices for second topping * 6 choices for 3rd topping / repeats\n",
     "\n",
     "For Example:\n",
     "\n",
     "Mushrooms, Pepperoni, Onion is the same as  Pepperoni, Mushrooms, Onion and Onion, Mushrooms, Pepperoni.\n",
     "\n",
-    "Essentially, we need to divide by how many different arrangements could be made with the three toppings (you can use another factorial to calculate that). [Pose this as a question for students.]   \n",
+    "From this permutation-esque conceptualization, we need to divide by how many different arrangements could be made with any the three toppings, as these will be the repeat examples under our current formulation.\n",
+    "\n",
+    "Q: How many repeats will there be for each of our 3 topping pizzas following the current procedure of 8 choices for first topping * 7 remaining choices for second topping * 6 choices for 3rd topping?\n",
+    "\n",
+    "> Hint: you can use another factorial to calculate the repeats.   \n",
     "\n",
     "A: $3!=3\\cdot2\\cdot1=6$\n",
     "\n",
@@ -129,6 +141,11 @@
     "Abstracting to a formula, we have:\n",
     "\n",
     "$\\frac{8!}{5!\\cdot number\\_of\\_repeats}$\n",
+    "\n",
+    "\n",
+    "Note how we have managed to rewrite $8\\cdot7\\cdot6$ as $\\frac{8!}{5!}$ since $\\frac{8!}{5!} = \\frac{8\\cdot7\\cdot6\\cdot5\\cdot4\\cdot3\\cdot2\\cdot1}{5\\cdot4\\cdot3\\cdot2\\cdot1}$  and many terms *'cancel'*, namely 1 through 5.\n",
+    "    > *'cancel'* is a common terminology and so used here, but potentially misleading and vague. If you wish to be clarify, albeit verbosely, we can say that matching factors in the numerator and denominator *'cancel'*, because they form a multiplicative identity. For example, $frac{5}{5}=1$, and since $1$ is the identity element for multiplication ($1\\cdotx=x$), these factors can essentially be *'canceled out'* in reducing the fraction to simplest form.\n",
+    "\n",
     "\n",
     "Even more abstractly, in general:\n",
     "n items chosen r at a time\n",
