small fix to text cell

--- a/Lesson_with_solutions.ipynb
+++ b/Lesson_with_solutions.ipynb
@@ -146,7 +146,7 @@
    "source": [
     "## Conditional Probability\n",
     "\n",
-    "### When do we need to compute conditional probabilities? \n",
+    "### When do we compute conditional probabilities? \n",
     "\n",
     "A: We need to compute conditional probabilities when the outcome of an event depends on the outcome of previous events (dependent events). A conditional probability of an event is the probability of the event given another event has occurred.\n",
     "\n",
