--- a/Lesson_with_solutions.ipynb
+++ b/Lesson_with_solutions.ipynb
@@ -144,7 +144,8 @@
     "\n",
     "\n",
     "Note how we have managed to rewrite $8\\cdot7\\cdot6$ as $\\frac{8!}{5!}$ since $\\frac{8!}{5!} = \\frac{8\\cdot7\\cdot6\\cdot5\\cdot4\\cdot3\\cdot2\\cdot1}{5\\cdot4\\cdot3\\cdot2\\cdot1}$  and many terms *'cancel'*, namely 1 through 5.\n",
-    "    > *'cancel'* is a common terminology and so used here, but potentially misleading and vague. If you wish to be clarify, albeit verbosely, we can say that matching factors in the numerator and denominator *'cancel'*, because they form a multiplicative identity. For example, $frac{5}{5}=1$, and since $1$ is the identity element for multiplication ($1\\cdotx=x$), these factors can essentially be *'canceled out'* in reducing the fraction to simplest form.\n",
+    "\n",
+    "> *'cancel'* is a common terminology and so used here, but potentially misleading and vague. If you wish to be clarify, albeit verbosely, we can say that matching factors in the numerator and denominator *'cancel'*, because they form a multiplicative identity. For example, $\\frac{5}{5}=1$, and since $1$ is the identity element for multiplication ($1\\cdot x=x$), these factors can essentially be *'canceled out'* in reducing the fraction to simplest form.\n",
     "\n",
     "\n",
     "Even more abstractly, in general:\n",
@@ -428,7 +429,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Partitioning Complex Events"
+    "## Partitioning Complex Events\n",
+    "\n",
+    "Let's take some time and review questions like those from the [dsc-law-of-total-probability-lab](https://github.com/learn-co-curriculum/dsc-law-of-total-probability-lab).  \n",
+    "\n",
+    "According to the CDC, [14% of Americans currently smoke, 15.8% of males and 12.2% of females](https://www.cdc.gov/tobacco/data_statistics/fact_sheets/adult_data/cig_smoking/index.htm). According the the American Lung Association, [men who smoke are 23 times more likely to smoke then never-smokers, and women are 13 times as likely](https://www.lung.org/lung-health-and-diseases/lung-disease-lookup/lung-cancer/resource-library/lung-cancer-fact-sheet.html). The American Cancer Society estimates that [the lifetime risk of developing lung cancer is 6.85%](https://www.cancer.org/cancer/cancer-basics/lifetime-probability-of-developing-or-dying-from-cancer.html). Currently, the census estimates that [women are 50.8% of the population](https://www.census.gov/quickfacts/fact/table/US/PST045218). \n",
+    "\n",
+    "What is the risk of lung cancer for non-smokers? Non-smoker males? Non-smoker females?\n",
+    "\n",
+    "> To learn more about lung-cancer risks for non-smokers, see https://www.cancer.org/latest-news/why-lung-cancer-strikes-nonsmokers.html."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Number"
    ]
   },
   {
