added more features to cleaned mushroom dataset, modified readme and jupyter notebook

--- a/Lesson_with_solutions.ipynb
+++ b/Lesson_with_solutions.ipynb
@@ -154,13 +154,19 @@
     "\n",
     "To discuss conditional probability, let's look at a modified version of the Mushroom dataset from UCI [here](https://archive.ics.uci.edu/ml/datasets/Mushroom). Each row in this dataset corresponds to one observation (one mushroom). \n",
     "\n",
-    "The modified dataset includes 2 variables:\n",
+    "The modified dataset includes 4 variables:\n",
     "\n",
     "* **edible-poisonous**\n",
-    "    * This variable can have one of two values: if the mushroom is edible, \"edible\". If not, \"poisonous\"\n",
+    "    * This categorical variable can have one of two values: if the mushroom is edible, \"edible\". If not, \"poisonous\"\n",
     "\n",
     "* **bruised**\n",
-    "    * This is a Boolean variable that can assume either one of two values, True or False."
+    "    * This is a Boolean variable that can assume either one of two values, True or False.\n",
+    "\n",
+    "* **gill-spacing**\n",
+    "    * This categorical variable can have one of three values: \"close\", \"crowded\", or \"distant\"\n",
+    "    \n",
+    "* **stalk-shape**\n",
+    "    * This categorical variable can have one of two values: \"enlarging\" or \"tapering\""
    ]
   },
   {
@@ -190,6 +196,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>edible-poisonous</th>\n",
+       "      <th>gill-spacing</th>\n",
+       "      <th>stalk-shape</th>\n",
        "      <th>bruised</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -197,26 +205,36 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>poisonous</td>\n",
+       "      <td>close</td>\n",
+       "      <td>enlarging</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>edible</td>\n",
+       "      <td>close</td>\n",
+       "      <td>enlarging</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>edible</td>\n",
+       "      <td>close</td>\n",
+       "      <td>enlarging</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>poisonous</td>\n",
+       "      <td>close</td>\n",
+       "      <td>enlarging</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>edible</td>\n",
+       "      <td>crowded</td>\n",
+       "      <td>tapering</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -224,12 +242,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  edible-poisonous  bruised\n",
-       "0        poisonous     True\n",
-       "1           edible     True\n",
-       "2           edible     True\n",
-       "3        poisonous     True\n",
-       "4           edible    False"
+       "  edible-poisonous gill-spacing stalk-shape  bruised\n",
+       "0        poisonous        close   enlarging     True\n",
+       "1           edible        close   enlarging     True\n",
+       "2           edible        close   enlarging     True\n",
+       "3        poisonous        close   enlarging     True\n",
+       "4           edible      crowded    tapering    False"
       ]
      },
      "execution_count": 4,
