--- a/Mushroom_Preprocessing_Script.ipynb
+++ b/Mushroom_Preprocessing_Script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,11 +258,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[['edible-poisonous', 'bruises?']]"
+    "df = df[['edible-poisonous', 'bruises?', 'gill-spacing', 'stalk-shape']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>edible-poisonous</th>\n",
+       "      <th>bruises?</th>\n",
+       "      <th>gill-spacing</th>\n",
+       "      <th>stalk-shape</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>p</td>\n",
+       "      <td>t</td>\n",
+       "      <td>c</td>\n",
+       "      <td>e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>e</td>\n",
+       "      <td>t</td>\n",
+       "      <td>c</td>\n",
+       "      <td>e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>e</td>\n",
+       "      <td>t</td>\n",
+       "      <td>c</td>\n",
+       "      <td>e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>p</td>\n",
+       "      <td>t</td>\n",
+       "      <td>c</td>\n",
+       "      <td>e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>e</td>\n",
+       "      <td>f</td>\n",
+       "      <td>w</td>\n",
+       "      <td>t</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  edible-poisonous bruises? gill-spacing stalk-shape\n",
+       "0                p        t            c           e\n",
+       "1                e        t            c           e\n",
+       "2                e        t            c           e\n",
+       "3                p        t            c           e\n",
+       "4                e        f            w           t"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
@@ -293,45 +383,57 @@
        "      <th></th>\n",
        "      <th>edible-poisonous</th>\n",
        "      <th>bruises?</th>\n",
+       "      <th>gill-spacing</th>\n",
+       "      <th>stalk-shape</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>p</td>\n",
-       "      <td>t</td>\n",
+       "      <td>poisonous</td>\n",
+       "      <td>true</td>\n",
+       "      <td>close</td>\n",
+       "      <td>enlarging</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>e</td>\n",
-       "      <td>t</td>\n",
+       "      <td>edible</td>\n",
+       "      <td>true</td>\n",
+       "      <td>close</td>\n",
+       "      <td>enlarging</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>e</td>\n",
-       "      <td>t</td>\n",
+       "      <td>edible</td>\n",
+       "      <td>true</td>\n",
+       "      <td>close</td>\n",
+       "      <td>enlarging</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>p</td>\n",
-       "      <td>t</td>\n",
+       "      <td>poisonous</td>\n",
+       "      <td>true</td>\n",
+       "      <td>close</td>\n",
+       "      <td>enlarging</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>e</td>\n",
-       "      <td>f</td>\n",
+       "      <td>edible</td>\n",
+       "      <td>false</td>\n",
+       "      <td>crowded</td>\n",
+       "      <td>tapering</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  edible-poisonous bruises?\n",
-       "0                p        t\n",
-       "1                e        t\n",
-       "2                e        t\n",
-       "3                p        t\n",
-       "4                e        f"
+       "  edible-poisonous bruises? gill-spacing stalk-shape\n",
+       "0        poisonous     true        close   enlarging\n",
+       "1           edible     true        close   enlarging\n",
+       "2           edible     true        close   enlarging\n",
+       "3        poisonous     true        close   enlarging\n",
+       "4           edible    false      crowded    tapering"
       ]
      },
      "execution_count": 7,
@@ -340,93 +442,16 @@
     }
    ],
    "source": [
+    "df['edible-poisonous'] = df['edible-poisonous'].map({'p':'poisonous', 'e':'edible'})\n",
+    "df['bruises?'] = df['bruises?'].map({'t':'true', 'f': 'false'})\n",
+    "df['gill-spacing'] = df['gill-spacing'].map({'c':'close', 'w': 'crowded', 'd':'distant'})\n",
+    "df['stalk-shape'] = df['stalk-shape'].map({'e':'enlarging', 't':'tapering'})\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>edible-poisonous</th>\n",
-       "      <th>bruises?</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>poisonous</td>\n",
-       "      <td>true</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>edible</td>\n",
-       "      <td>true</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>edible</td>\n",
-       "      <td>true</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>poisonous</td>\n",
-       "      <td>true</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>edible</td>\n",
-       "      <td>false</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  edible-poisonous bruises?\n",
-       "0        poisonous     true\n",
-       "1           edible     true\n",
-       "2           edible     true\n",
-       "3        poisonous     true\n",
-       "4           edible    false"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['edible-poisonous'] = df['edible-poisonous'].map({'p':'poisonous', 'e':'edible'})\n",
-    "df['bruises?'] = df['bruises?'].map({'t':'true', 'f': 'false'})\n",
-    "\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -500,6 +525,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>edible-poisonous</th>\n",
+       "      <th>gill-spacing</th>\n",
+       "      <th>stalk-shape</th>\n",
        "      <th>bruised</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -507,26 +534,36 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>poisonous</td>\n",
+       "      <td>close</td>\n",
+       "      <td>enlarging</td>\n",
        "      <td>true</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>edible</td>\n",
+       "      <td>close</td>\n",
+       "      <td>enlarging</td>\n",
        "      <td>true</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>edible</td>\n",
+       "      <td>close</td>\n",
+       "      <td>enlarging</td>\n",
        "      <td>true</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>poisonous</td>\n",
+       "      <td>close</td>\n",
+       "      <td>enlarging</td>\n",
        "      <td>true</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>edible</td>\n",
+       "      <td>crowded</td>\n",
+       "      <td>tapering</td>\n",
        "      <td>false</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -534,15 +571,15 @@
        "</div>"
       ],
       "text/plain": [
-       "  edible-poisonous bruised\n",
-       "0        poisonous    true\n",
-       "1           edible    true\n",
-       "2           edible    true\n",
-       "3        poisonous    true\n",
-       "4           edible   false"
+       "  edible-poisonous gill-spacing stalk-shape bruised\n",
+       "0        poisonous        close   enlarging    true\n",
+       "1           edible        close   enlarging    true\n",
+       "2           edible        close   enlarging    true\n",
+       "3        poisonous        close   enlarging    true\n",
+       "4           edible      crowded    tapering   false"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
