created images folder, placed venn diagram image within, and modified jupyter notebook to include venn diagram

--- a/Lesson_with_solutions.ipynb
+++ b/Lesson_with_solutions.ipynb
@@ -454,17 +454,21 @@
     "\n",
     "How do you compute the probability that mushrooms are edible given they are bruised? \n",
     "\n",
-    "* When you ask the question \"what is the probability that the mushrooms are edible and bruised?\", the sample space originally contains all 8124 rows of mushrooms. \n",
+    "When you ask the question \"what is the probability that the mushrooms are edible and bruised?\", the sample space originally contains all 8124 rows of mushrooms. \n",
     "\n",
-    "* However, to compute the probability that the mushrooms are edible given they are bruised, you need to consider the reduced size of the sample space. \n",
+    "<img src=\"images/Image_72_Cond4.png\" width=\"300\">\n",
     "\n",
-    "    * When you ask the question \"what is the probability that the mushrooms are edible given the mushrooms are bruised?\", you have effectively reduced the size of the sample space to include only those mushrooms that are bruised. \n",
+    "However, to compute the probability that the mushrooms are edible given they are bruised, you need to consider the reduced size of the sample space. \n",
     "\n",
-    "    * Given that mushrooms are bruised, the only way for the mushrooms to be edible is for these mushrooms to fall in the intersection of the set of mushrooms that are edible _and_ the set of mushrooms that are bruised, $P(edible \\cap bruised)$\n",
+    "In the image above, S is the universe of all mushrooms in the dataset, A is the set of mushrooms that are edible, and B is the set of mushrooms that are bruised.\n",
     "\n",
-    "    * To account for the smaller sample space, you divide the probability mushrooms are edible and bruised by the probability the mushrooms are bruised.\n",
-    "    \n",
-    "    $$ P(edible|bruised) = \\frac{P(edible \\cap bruised)}{P(bruised)}$$\n"
+    "* When you ask the question \"what is the probability that the mushrooms are edible given the mushrooms are bruised?\", you have effectively reduced the size of the sample space to include only those mushrooms that are bruised. \n",
+    "\n",
+    "* Given that mushrooms are bruised, the only way for the mushrooms to be edible is for these mushrooms to fall in the intersection of the set of mushrooms that are edible _and_ the set of mushrooms that are bruised , $P(edible \\cap bruised)$.  \n",
+    "\n",
+    "* To account for the smaller sample space, you divide the probability mushrooms are edible and bruised by the probability the mushrooms are bruised: $$\\large P(edible|bruised) = \\frac{P(edible \\cap bruised)}{P(bruised)}$$\n",
+    "\n",
+    "\n"
    ]
   },
   {
